--- a/res/site/css/style.css
+++ b/res/site/css/style.css
@@ -28,7 +28,15 @@ h6 {
 }
 body { font-family:Arial, Helvetica, sans-serif; }
 
-
+h1 small{
+    color: #000;
+    font-size: 13px;
+    font-weight: 100;
+    position: absolute;
+    bottom: 0px;
+    letter-spacing: 6px;
+    margin-bottom: 20px;
+}
 
 .header-area {
     background: none repeat scroll 0 0 #f4f4f4;
