--- a/views/header.html
+++ b/views/header.html
@@ -100,7 +100,7 @@
                     <div class="logo">
                         <h1><a href="/">
                             <h1 style="color:#e67e22">TI Store</h1>
-                            <small>Fa32.com.br</small>
+                            <!--<small>Fa32.com.br</small>-->
                             <!--<img src="/res/site/img/logo.png">-->
                         </a></h1>
                     </div>
