--- a/views/header.html
+++ b/views/header.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hcode Store</title>
+    <title>TI Store | Fat32.com.br</title>
     
     <!-- Google Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,700,600' rel='stylesheet' type='text/css'>
@@ -68,17 +68,20 @@
                 </div>
                 
                 <div class="col-md-4">
-                    <div class="header-right hidden">
+                    <div class="header-right">
                         <ul class="list-unstyled list-inline">
                             <li class="dropdown dropdown-small">
-                                <a data-toggle="dropdown" data-hover="dropdown" class="dropdown-toggle" href="#"><span class="key">moeda :</span><span class="value">BRL </span><b class="caret"></b></a>
+                                <a data-toggle="dropdown" data-hover="dropdown" class="dropdown-toggle" href="#"><span class="key">Portfólio </span><span class="value"><!--Páginas--> </span><b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">BRL</a></li>
-                                    <li><a href="#">USD</a></li>
+                                    <li><a href="https://fat32.com.br" target="_blank">Home</a></li>
+                                    <li><a href="https://e-book.fat32.com.br" target="_blank">E-book Store</a></li>
+                                    <li><a href="https://landing.fat32.com.br" target="_blank">Landing</a></li>
+                                    <li><a href="https://code.fat32.com.br" target="_blank">Code</a></li>
+                                    <li><a href="https://borussia.fat32.com.br" target="_blank">Borussia</a></li>
                                 </ul>
                             </li>
 
-                            <li class="dropdown dropdown-small">
+                            <li class="dropdown dropdown-small hidden">
                                 <a data-toggle="dropdown" data-hover="dropdown" class="dropdown-toggle" href="#"><span class="key">linguagem :</span><span class="value">Português </span><b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="#">Português</a></li>
