--- a/views/header.html
+++ b/views/header.html
@@ -71,7 +71,7 @@
                     <div class="header-right">
                         <ul class="list-unstyled list-inline">
                             <li class="dropdown dropdown-small">
-                                <a data-toggle="dropdown" data-hover="dropdown" class="dropdown-toggle" href="#"><span class="key">Portfólio: </span><span class="value">Home </span><b class="caret"></b></a>
+                                <a data-toggle="dropdown" data-hover="dropdown" class="dropdown-toggle"><span class="key">Portfólio: </span><span class="value">Home </span><b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="https://fat32.com.br" target="_blank">Home</a></li>
                                     <li><a href="https://e-book.fat32.com.br" target="_blank">E-book Store</a></li>
